@@ -1,4 +1,5 @@
 v0.1.1
+  api change: camel case everything (nextSibling, prevSibling, defineNamespace)
   feature: add #toString() to nodes
   feature: add #remove() to nodes
   housekeeping: update spectacular
